--- a/index.html
+++ b/index.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AI Voice Call App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Call Agent</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container mt-5">
-    <h2 class="text-center mb-4">📞 AI Voice Call Assistant</h2>
+    <h2 class="mb-4 text-center">📞 AI Call Agent Setup</h2>
 
-    <!-- Call Form -->
-    <div class="card mb-4">
-      <div class="card-header">Make a Call</div>
-      <div class="card-body">
-        <form id="callForm">
-          <div class="mb-3">
-            <label for="phoneNumber" class="form-label">Phone Number</label>
-            <input type="tel" class="form-control" id="phoneNumber" placeholder="+14165556666" required>
-          </div>
-          <button type="submit" class="btn btn-primary">Call Now</button>
-        </form>
-        <div id="callStatus" class="mt-3"></div>
+    <form id="infoForm">
+      <div class="mb-3">
+        <label for="userName" class="form-label">User Name</label>
+        <input type="text" class="form-control" id="userName" required />
       </div>
-    </div>
 
-    <!-- Prompt Form -->
-    <div class="card">
-      <div class="card-header">Set System Prompt</div>
-      <div class="card-body">
-        <form id="promptForm">
-          <div class="mb-3">
-            <label for="systemPrompt" class="form-label">System Prompt</label>
-            <textarea class="form-control" id="systemPrompt" rows="3" placeholder="e.g., You are a legal assistant..."></textarea>
-          </div>
-          <button type="submit" class="btn btn-success">Update Prompt</button>
-        </form>
-        <div id="promptStatus" class="mt-3"></div>
+      <div class="mb-3">
+        <label for="amountDue" class="form-label">Overdue Amount</label>
+        <input type="text" class="form-control" id="amountDue" required />
       </div>
-    </div>
+
+      <div class="mb-3">
+        <label for="companyName" class="form-label">Company Name</label>
+        <input type="text" class="form-control" id="companyName" required />
+      </div>
+
+      <div class="mb-3">
+        <label for="phoneNumber" class="form-label">Phone Number to Call</label>
+        <input type="tel" class="form-control" id="phoneNumber" required />
+      </div>
+
+      <button type="submit" class="btn btn-primary w-100">Initiate Call</button>
+    </form>
+
+    <div class="mt-4 alert d-none" id="responseBox"></div>
   </div>
 
-  <!-- Bootstrap JS + App -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
