--- a/index.html
+++ b/index.html
@@ -4,87 +4,122 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI Call Agent</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      background-color: #f4f7fa;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .card {
+      border-radius: 12px;
+    }
+    .card-title {
+      font-weight: 600;
+    }
+    .alert {
+      font-size: 0.95rem;
+    }
+    .logo-img {
+      width: 40px;
+      margin-right: 10px;
+    }
+    .sticky-header {
+      position: sticky;
+      top: 0;
+      z-index: 999;
+      background-color: #fff;
+      padding: 10px 0;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-  <div class="container py-5">
-    <!-- Logo Header -->
-    <div class="text-center mb-5">
-      <img src="https://cdn-icons-png.flaticon.com/512/4829/4829605.png" alt="AI Call Logo" width="80" class="mb-3" />
-      <h1 class="display-5 fw-bold text-primary">AI Call Agent</h1>
-      <p class="text-muted">🤖 Your automated voice assistant for overdue payment reminders</p>
-    </div>
+  <!-- Sticky Header -->
+  <div class="container sticky-header d-flex align-items-center justify-content-center">
+    <img src="https://cdn-icons-png.flaticon.com/512/4829/4829605.png" alt="Logo" class="logo-img" />
+    <h4 class="mb-0 text-primary fw-bold">AI Call Agent</h4>
+  </div>
 
-    <div class="row g-4">
-      <!-- Left Section -->
+  <div class="container py-4">
+    <div class="row g-4 align-items-start">
+      <!-- Left: Form -->
       <div class="col-lg-6">
-        <div class="card shadow-sm mb-4">
-          <div class="card-body">
-            <h4 class="card-title text-success">🧠 Web App Description</h4>
-            <p class="card-text">
-              This <strong>AI-powered voice assistant</strong> automatically places calls to customers about overdue loans.
-              It combines the power of <span class="text-primary fw-semibold">OpenAI</span> and <span class="text-danger fw-semibold">Twilio</span> for real-time, intelligent voice interactions.
-            </p>
-            <ul>
-              <li>📌 Personalized system prompt</li>
-              <li>💬 Natural AI voice interaction</li>
-              <li>⚙️ Fully automated call flow</li>
-            </ul>
-            <img src="https://cdn-icons-png.flaticon.com/512/4140/4140048.png" alt="AI Agent" class="img-fluid mt-3 rounded shadow-sm" />
-          </div>
-        </div>
-
         <div class="card shadow-sm">
           <div class="card-body">
-            <h4 class="card-title text-warning">🗒️ Notes</h4>
-            <ul class="card-text small">
-              <li>✅ Verify Twilio number for trial accounts</li>
-              <li>⏱️ OpenAI response delay depends on request load</li>
-              <li>🚫 Do not reload while waiting for response</li>
-              <li>🌐 Ensure backend is deployed and reachable</li>
-            </ul>
-            <img src="https://cdn-icons-png.flaticon.com/512/1150/1150631.png" alt="Reminder Icon" class="img-fluid mt-3 rounded shadow-sm" />
+            <h5 class="card-title text-primary">📇 Caller Info Setup</h5>
+            <form id="infoForm">
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="userName" class="form-label">👤 User Name</label>
+                  <input type="text" class="form-control" id="userName" required />
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="amountDue" class="form-label">💰 Amount</label>
+                  <input type="text" class="form-control" id="amountDue" required />
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="companyName" class="form-label">🏢 Company</label>
+                  <input type="text" class="form-control" id="companyName" required />
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="phoneNumber" class="form-label">📞 Phone No</label>
+                  <input type="tel" class="form-control" id="phoneNumber" required />
+                </div>
+              </div>
+
+              <button type="submit" class="btn btn-success w-100 mt-2">🚀 Initiate Call</button>
+            </form>
+            <div class="mt-3 alert d-none" id="responseBox"></div>
           </div>
         </div>
       </div>
 
-      <!-- Right Section -->
+      <!-- Right: Info + Images -->
       <div class="col-lg-6">
-        <div class="card shadow h-100">
-          <div class="card-body">
-            <h4 class="card-title mb-4 text-primary">📇 Caller Info Setup</h4>
-            <form id="infoForm">
-              <div class="mb-3">
-                <label for="userName" class="form-label">👤 User Name</label>
-                <input type="text" class="form-control" id="userName" required />
+        <!-- Accordion for compact description -->
+        <div class="accordion" id="infoAccordion">
+          <div class="accordion-item mb-3">
+            <h2 class="accordion-header" id="descHeading">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#descCollapse">
+                🧠 Web App Description
+              </button>
+            </h2>
+            <div id="descCollapse" class="accordion-collapse collapse show">
+              <div class="accordion-body">
+                <p>
+                  This <strong>AI-powered agent</strong> calls customers about overdue loans using
+                  <span class="text-primary fw-semibold">OpenAI</span> + <span class="text-danger fw-semibold">Twilio</span>.
+                </p>
+                <ul>
+                  <li>📌 Personalized system prompt</li>
+                  <li>💬 Natural AI voice</li>
+                  <li>⚙️ Automated call flow</li>
+                </ul>
+                <img src="https://cdn-icons-png.flaticon.com/512/4140/4140048.png" class="img-fluid rounded mt-2" style="max-width: 150px;" />
               </div>
+            </div>
+          </div>
 
-              <div class="mb-3">
-                <label for="amountDue" class="form-label">💰 Overdue Amount</label>
-                <input type="text" class="form-control" id="amountDue" required />
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="notesHeading">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#notesCollapse">
+                🗒️ Important Notes
+              </button>
+            </h2>
+            <div id="notesCollapse" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                <ul class="small">
+                  <li>✅ Use verified Twilio numbers for testing</li>
+                  <li>⏱️ OpenAI replies may take 2–4 sec</li>
+                  <li>🚫 Avoid refreshing during a call</li>
+                  <li>🌐 Ensure backend is live</li>
+                </ul>
+                <img src="https://cdn-icons-png.flaticon.com/512/1150/1150631.png" class="img-fluid rounded" style="max-width: 120px;" />
               </div>
-
-              <div class="mb-3">
-                <label for="companyName" class="form-label">🏢 Company Name</label>
-                <input type="text" class="form-control" id="companyName" required />
-              </div>
-
-              <div class="mb-3">
-                <label for="phoneNumber" class="form-label">📞 Phone Number to Call</label>
-                <input type="tel" class="form-control" id="phoneNumber" required />
-              </div>
-
-              <button type="submit" class="btn btn-success w-100">🚀 Initiate Call</button>
-            </form>
-
-            <div class="mt-3 alert d-none" id="responseBox"></div>
-
-            <div class="text-center mt-4">
-              <img src="https://cdn-icons-png.flaticon.com/512/1617/1617482.png" alt="Call Icon" width="60" class="img-fluid" />
             </div>
           </div>
         </div>
@@ -92,6 +127,8 @@
     </div>
   </div>
 
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
