--- a/index.html
+++ b/index.html
@@ -4,70 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AI Call Agent</title>
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    body {
-      background-color: #0d1117;
-      color: #c9d1d9;
-      font-family: 'Segoe UI', sans-serif;
-    }
-    .sticky-header {
-      background-color: #161b22;
-      color: #58a6ff;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      padding: 10px 0;
-      text-align: center;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
-    }
-    .logo-img {
-      width: 40px;
-      filter: brightness(0) invert(1);
-      margin-right: 10px;
-    }
-    .card {
-      background-color: #161b22;
-      border: 1px solid #30363d;
-      border-radius: 12px;
-    }
-    .card-title {
-      color: #58a6ff;
-    }
-    .form-label {
-      color: #a3b8cc;
-    }
-    .form-control {
-      background-color: #0d1117;
-      color: #c9d1d9;
-      border: 1px solid #30363d;
-    }
-    .form-control:focus {
-      border-color: #58a6ff;
-      box-shadow: none;
-    }
-    .btn-submit {
-      background-color: #58a6ff;
-      color: #0d1117;
-      border: none;
-      font-weight: bold;
-    }
-    .btn-submit:hover {
-      background-color: #1f6feb;
-      color: white;
-    }
-    .alert {
-      background-color: #21262d;
-      color: #c9d1d9;
-      border: none;
-    }
-    ul {
-      padding-left: 1.2rem;
-    }
-    .text-sky {
-      color: #79c0ff;
-    }
-  </style>
+
+  <!-- Custom Dark Theme CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Sticky Header -->
@@ -150,7 +92,7 @@
     </div>
   </div>
 
-  <!-- Scripts -->
+  <!-- Bootstrap + Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
