--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <p>
               This <span class="text-sky">AI-powered agent</span> makes intelligent phone calls to customers
               regarding overdue loan payments.
-              It combines <strong class="text-sky">OpenAI</strong> for smart responses and
-              <strong class="text-danger">Twilio</strong> for real-time voice communication.
+              It combines <strong class="text-primary">OpenAI</strong> for smart responses and
+              <strong class="text-danger">Voice Call Agent</strong> for real-time voice communication.
             </p>
             <ul>
               <li>📌 Personalized voice prompts based on user input</li>
