--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!-- Custom Dark Theme CSS -->
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -23,7 +23,6 @@
     <div class="row g-4">
       <!-- Left Column: Form + Notes -->
       <div class="col-lg-6">
-        <!-- Caller Info Form -->
         <div class="card mb-4">
           <div class="card-body">
             <h5 class="card-title">📇 Caller Info Setup</h5>
@@ -54,7 +53,6 @@
           </div>
         </div>
 
-        <!-- Notes -->
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">🗒️ Important Notes</h5>
@@ -64,35 +62,38 @@
               <li>🚫 Avoid refreshing after call initiation.</li>
               <li>🌐 Ensure backend is deployed and reachable.</li>
             </ul>
-            <img src="https://cdn-icons-png.flaticon.com/512/1150/1150631.png" class="img-fluid mt-2" style="max-width: 120px;" alt="Note Icon" />
           </div>
         </div>
       </div>
 
-      <!-- Right Column: Description -->
+      <!-- Right Column: Description + History -->
       <div class="col-lg-6">
-        <div class="card h-100">
+        <div class="card mb-4">
           <div class="card-body">
             <h5 class="card-title">🧠 Web App Description</h5>
             <p>
-              This <span class="text-sky">AI-powered agent</span> makes intelligent phone calls to customers
-              regarding overdue loan payments.
-              It combines <strong class="text-primary">OpenAI</strong> for smart responses and
-              <strong class="text-danger">Voice Call Agent</strong> for real-time voice communication.
+              This <span class="text-info">AI-powered agent</span> makes intelligent phone calls to customers about overdue loans.
+              It uses <strong class="text-primary">OpenAI</strong> and <strong>Twilio</strong> for smart interactions.
             </p>
             <ul>
-              <li>📌 Personalized voice prompts based on user input</li>
-              <li>💬 Natural conversational interaction</li>
-              <li>⚙️ Fully automated workflow</li>
+              <li>📌 Personalized call prompts</li>
+              <li>💬 Natural voice conversation</li>
+              <li>⚙️ Automated agent behavior</li>
             </ul>
-            <img src="https://cdn-icons-png.flaticon.com/512/4140/4140048.png" class="img-fluid rounded mt-3" style="max-width: 150px;" alt="AI Assistant" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">📞 Call History</h5>
+            <ul id="callHistoryList" class="mb-0"></ul>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Bootstrap + Script -->
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
