--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AI Call Agent</title>
-
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sticky Header -->
   <div class="sticky-header d-flex align-items-center justify-content-center">
     <img src="https://cdn-icons-png.flaticon.com/512/4829/4829605.png" alt="Logo" class="logo-img" />
     <h4 class="mb-0 fw-bold">AI Call Agent</h4>
   </div>
-
-  <!-- Main Content -->
   <div class="container py-4">
     <div class="row g-4">
-      <!-- Left Column: Form + Notes -->
       <div class="col-lg-6">
         <div class="card mb-4">
           <div class="card-body">
@@ -52,7 +45,6 @@
             <div class="mt-3 alert d-none" id="responseBox"></div>
           </div>
         </div>
-
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">🗒️ Important Notes</h5>
@@ -65,16 +57,11 @@
           </div>
         </div>
       </div>
-
-      <!-- Right Column: Description + History -->
       <div class="col-lg-6">
         <div class="card mb-4">
           <div class="card-body">
             <h5 class="card-title">🧠 Web App Description</h5>
-            <p>
-              This <span class="text-info">AI-powered agent</span> makes intelligent phone calls to customers about overdue loans.
-              It uses <strong class="text-primary">OpenAI</strong> and <strong>Twilio</strong> for smart interactions.
-            </p>
+            <p>This <span class="text-info">AI-powered agent</span> makes intelligent phone calls to customers about overdue loans. It uses <strong class="text-primary">OpenAI</strong> and <strong>Twilio</strong> for smart interactions.</p>
             <ul>
               <li>📌 Personalized call prompts</li>
               <li>💬 Natural voice conversation</li>
@@ -82,7 +69,6 @@
             </ul>
           </div>
         </div>
-
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">📞 Call History</h5>
@@ -92,8 +78,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
